k8s-python/svc.yml
apiVersion: v1
kind: Service
metadata:
    name: python-svc
spec:
    type: ClusterIP
    selector:
        app: python-app
    ports:
      - port: 4000
        targetPort: 3000
        protocol: TCP
        #nodePort: 32000
