k8s-python/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-ingress
  annotations:
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/use-regex: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    #nginx.ingress.kubernetes.io/affinity: cookie
    #nginx.ingress.kubernetes.io/csrf-cookie-name: XSRF-TOKEN
    #nginx.ingress.kubernetes.io/enable-csrf-protection: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: www.devopslearning.live
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-svc
            port:
              number: 4000
  tls:
  - hosts:
    - www.devopslearning.live
    secretName: ingress-testing
